fix: address the removal path's review and reliability findings
Five defects found by review of this branch, none of which the existing tests
could see.

The read and the removal of one id addressed two different resources. The read
concatenated the id raw, so an id holding a character that is not URL-safe made
a URI the client could not even build and the read reported the server
unreachable; the removal form-encoded it, which turns a space into a plus that
stays a literal plus in a path segment. The class already had urlSegment for
exactly this, used by token revocation. Both now use it. The query-string
encoder on the list path is left alone: form encoding is correct there.

A refused removal lost its code and message whenever the server sent a
null-valued parameter, because Map.copyOf rejects nulls and the resulting throw
was caught by the fall-through that answers with a generic refusal. The caller
was then left with a sentence and no next step, over the least informative part
of the body. An unmodifiable view keeps the parameter as sent.

The stop guidance filled its id slot from the refusal's parameters, so a refusal
that named the state but no id printed a command reading `stop null`. The line
is meant to be pasted, and the verb already knows which id was typed.

Two assertions passed vacuously on an empty list, which is the shape where they
had the most to say: a listing regression that returned nothing would have read
as every element agreeing, and a schema that lost its required fields entirely
would have read as proof that the precondition is optional. Each now pins the
collection it is asserting over.